--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,30 @@
 }
 
 .columns {
-  min-height: 100px;
+  min-height: 50px;
 }
 
 /* End for testing */
+.container {
+  width: 98%;
+  margin: 0 auto;
+}
+.title,
+.nav {
+  width: 50%;
+}
+.header {
+  height: 70px;
+}
+.heading {
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 50%;
+  margin-top: 40px;
+  height: 15px;
+}
+.gallery {
+  margin-top: 40px;
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  height: 50%;
+}
