--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,15 @@
   }
   .nav {
     float: right;
-    border: 1px solid red;
     margin-top: 0;
   }
   .wrap {
     text-align: center;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .main,
+  .secondary {
+    width: 20%;
   }
 }
